update roulette view file